fixed sponsor alignment on mobile

--- a/client/src/assets/css/Sponsors.css
+++ b/client/src/assets/css/Sponsors.css
@@ -19,7 +19,7 @@
   vertical-align: middle;
 }
 
-.row .icon {
+.row .icon, .supporters .icon {
   width: 300px;
 }
 
@@ -48,7 +48,7 @@
 }
 
 .CoolerMaster img {
-  width: 180px;
+  width: 160px;
 }
 
 .RedBull img {
@@ -59,16 +59,11 @@
   width: 100px;
 }
 
-.supporters .icon {
-  width: 200px;
-}
-
 .supporters img {
   width: 200px;
 }
 
-.Vanguard img,
-.ASUCM img {
+.Vanguard img, .ASUCM img {
   width: 150px;
 }
 
@@ -81,19 +76,15 @@
   width: 200px;
 }
 
-.sponsoring,
-.supporters {
+.sponsoring, .supporters {
   margin-bottom: 50px;
 }
 
 .icon img {
-  transition: transform .3s;
-  /* Animation */
+  transition: transform .3s; /* Animation */
 }
-
 .icon img:hover {
-  transform: scale(1.1);
-  /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
 @media screen and (max-width: 700px) {
@@ -106,11 +97,10 @@
     width: 400px;
   }
 }
-
 @media screen and (max-width: 550px) {
-  .sponsoring .icon {
+  .icon {
     display: block;
-    margin: 50px 0;
+    margin: 50px auto;
   }
 }
 
@@ -118,12 +108,11 @@
   .Citris img {
     width: 300px;
   }
-
   .Ucanr img {
     width: 300px;
   }
 
   .Venture img {
-    width: 250px;
+    width: 300px;
   }
 }
